# Nearby_Assistant

./: .gitignore  README.md  app.py  example.env  main.py  pyproject.toml
calendar_assistant/: agent.py  app.py  client.py  tools.py
gmail/: tools.py
gmail_assistant/: agent.py  app.py  client.py  tools.py
places_assistant/: agent.py  main.py
supervisor/: agent.py  app.py
